completed solveBoard function

--- a/style.css
+++ b/style.css
@@ -27,6 +27,6 @@
 	display: inline-block;
     vertical-align: middle;
     line-height: normal;
-    font-family: monospace;
+    font-family: arial;
     font-size: 1.2em;
 }
