--- a/style.css
+++ b/style.css
@@ -1,47 +1,28 @@
-body{
-	background-color: #fff;
-}
-
-.board div{
-	width: 40px;
-	height: 40px;
-	background-color: white;
-	border: 1px solid black;
-	line-height: 40px;
-	text-align: center;
-}
-
-.board{
-	width: 382px;
-	height: 382px;
-	/*border: 2px solid black;*/
-	display: flex;
-	flex-wrap: wrap;
-	top: 0;
+.grid-container{
+    display: flex;
+    flex-wrap: wrap;
+    top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	position: absolute;
 	margin: auto;
+    height: 360px;
+    width: 360px;
 }
 
-.num{
-	/*display: table;
-	margin: 0 auto;*/
-	display: inline-block;
-    vertical-align: middle;
-    line-height: normal;
-    font-family: arial;
-    font-size: 1.2em;
+.grid-container div{
+    height: 40px;
+    width: 40px;
 }
 
-.button-container{
-	display: flex;
-	justify-content: center;
+.grid-container div input{
+    height: 80%;
+    width: 75%;
+    text-align: center;
+    font-size: 1em;
 }
-
-#solve-button, #create-board, #visual{
-	border: 1px black solid;
-	background-color: white;
-	font-weight: 600;
-}
+/* 
+.solve{
+    
+} */
