--- a/style.css
+++ b/style.css
@@ -22,6 +22,21 @@
     text-align: center;
     font-size: 1em;
 }
+
+.wrapper{
+    width: 100%;
+    height: 100vh;
+    background-color: #f1f1f1;
+}
+
+.header{
+    display: table;
+    align-content: center;
+}
+
+.wrapper .header h1{
+    font-family: "Archivo Narrow";
+}
 /* 
 .solve{
     
