--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
+body{
+    background-color: #f2f2f2;
+}
+.container{
+    display: inline-grid;
+    grid-template-rows: auto auto;
+    row-gap: 1em;
+}
+
+.parent-board{
+    display: flex;
+    width: 95vw;
+    justify-content: center;
+    margin-top: 3em;
+}
+
 .grid-container{
     display: flex;
     flex-wrap: wrap;
-    top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	position: absolute;
-	margin: auto;
     height: 360px;
     width: 360px;
 }
@@ -23,26 +33,24 @@
     font-size: 1em;
 }
 
-.wrapper{
-    width: 100%;
-    height: 100vh;
-    background-color: #f1f1f1;
+.setting-wrapper{
+    display: flex;
+    justify-content: center;
 }
 
-.header{
-    display: table;
-    align-content: center;
-}
-
-.wrapper .header h1{
-    font-family: "Archivo Narrow";
+.settings{
+    display: flex;
+    width: 360px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .radio label{
     font-family: "Arial";
     font-size: 0.9em;
 }
-/* 
-.solve{
-    
-} */
+
+input[type="radio"] {
+    margin-top: -1px;
+    vertical-align: middle;
+  }
