--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body{
 }
 
 .grid-container div input{
-    height: 80%;
-    width: 75%;
+    height: 90%;
+    width: 85%;
     text-align: center;
     font-size: 1em;
 }
@@ -53,4 +53,9 @@ body{
 input[type="radio"] {
     margin-top: -1px;
     vertical-align: middle;
-  }
+}
+
+input[type="number"]{
+    border-radius: 0;
+    border: 1px solid black;
+}
