--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ h1{
     flex-wrap: wrap;
     height: 360px;
     width: 360px;
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.2);
 }
 
 .grid-container div{
