--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ input[type="number"]:disabled {
 input[type="radio"] {
     margin-top: -1px;
     vertical-align: middle;
+    cursor: pointer;
 }
 
 button{
