--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
     width: 30px;
     height: 30px;
     background-color: #e1e1e1;
-    border: 2px solid black;
+    /*border: 2px solid black;*/
     color: black;
     font-size: 30px;
     font-weight: 600;
