--- a/style.css
+++ b/style.css
@@ -153,8 +153,8 @@ input[type="radio"] {
 
 button{
     border-radius: 0.7em;
-    border: 1.3px solid black;
-    background-color: white;
+    border: 1.3px solid #f1f1f1;
+    background-color: #f1f1f1;
     text-align: center;
 }
 
