--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body{
     margin: 0;
 }
 
-/* pop-up */
 .pop-up .overlay{
     position: fixed;
     top: 0px;
@@ -44,7 +43,6 @@ body{
     width: 30px;
     height: 30px;
     background-color: #e1e1e1;
-    /*border: 2px solid black;*/
     color: black;
     font-size: 30px;
     font-weight: 600;
@@ -83,17 +81,15 @@ h1{
     font-family: arial;
     text-align: left;
     font-weight: 600;
-    /* font-style: italic; */
 }
 
 .parent-board{
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 95%;
+    height: 95vh;
     justify-content: center;
     align-items: center;
-    /*margin-top: 3em;*/
 }
 
 .buttons{
@@ -121,6 +117,7 @@ h1{
     font-size: 1em;
     border-radius: 0;
     border: 1px solid black;
+    display: inline-flex;
 }
 
 input[type="number"]:disabled {
@@ -128,18 +125,12 @@ input[type="number"]:disabled {
    color: black;
 }
 
-/*.setting-wrapper{
-    display: flex;
-    justify-content: center;
+input[type='number']::-webkit-inner-spin-button, 
+input[type='number']::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    margin: 0;
 }
 
-.settings{
-    display: flex;
-    width: 360px;
-    justify-content: space-between;
-    align-items: center;
-}
-*/
 .radio label{
     font-family: "Arial";
     font-size: 0.9em;
